--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "env": "^0.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "multer": "^1.4.5-lts.2",
     "react": "^18.3.1",
