--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
+    "google-auth-library": "^9.15.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
