--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.5",
     "xlsx": "^0.18.5"
   },
