--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
+    "framer-motion": "^12.9.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
