--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "lucide-react": "^0.474.0",
     "multer": "^1.4.5-lts.2",
     "react": "^18.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
