--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-router-dom": "^7.1.5",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0",
+    "web-vitals": "^5.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
