--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "multer": "^1.4.5-lts.2",
+    "pdfmake": "^0.2.20",
+    "puppeteer": "^24.11.1",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
